<resources>

    <string name="app_name">Easy Parking</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_map_view">MapViewActivity</string>
    <string name="title_activity_place_details">PlaceDetailsActivity</string>
    <string name="title_activity_list_results">ListResultsActivity</string>
    <string name="title_activity_tab_results">TabResultsActivity</string>
    <string name="home_seek_place_label">Je cherche une place : </string>
    <string name="home_free_label">Gratuite</string>
    <string name="home_not_free_label">Payante</string>
    <string name="home_handicap_label">Accessible handicapée</string>
    <string name="home_secure_label">Sécurisée</string>
    <string name="home_search_label">Go</string>
    <string name="home_adress_label">Adresse :</string>
    <string name="home_Geolocalisation_label">Autour de moi</string>
    <string name="home_away_label">Aller à </string>
    <string name="home_perimetre_label">Périmètre :</string>
    <string name="home_perimetre_min">100</string>
    <string name="home_perimetre_step">50</string>
    <string name="detail_title_label">Informations sur l\'emplacement</string>
    <string name="detail_localisation_label">Localisation</string>
    <string name="detail_contrainte_horaire_label">Contraintes horaires</string>
    <string name="detail_contrainte_part_label">Contraintes particulières</string>
    <string name="detail_contrainte_part_reserveeClientele_label">Réservée clientèle</string>
    <string name="detail_contrainte_part_reserveeLivraison_label">Réservée livraison</string>
    <string name="detail_type_aerien_label">Aérien</string>
    <string name="detail_type_couvert_label">Couvert</string>
    <string name="detail_type_souterrain_label">Souterrain</string>
    <string name="detail_type_label">Type</string>
    <string name="detail_info_gratuit">Gratuit</string>
    <string name="detail_info_prix">Prix : </string>
    <string name="detail_info_prix_duree">/heure</string>
    <string name="detail_info_accessH">Cette place est accessible aux handicapés</string>
    <string name="detail_info_securisee">Cette place est sécurisée</string>
    <string name="application_locationWay_label">LocationWay</string>
    <string name="application_locationMode_adress_label">ByAdress</string>
    <string name="application_locationMode_geolocalisation_label">ByGeolocalisation</string>
    <string name="list_no_place_label">Aucune place à afficher</string>
    <string name="error_ws">Erreur lors de la récupération des données</string>
    <string name="details">Détails</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="legende_title">Légende</string>
    <string name="legende_selfPosition">Votre position</string>
    <string name="legende_place">Place</string>

</resources>