<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="18dp"
        android:text="@string/home_seek_place_label" />

    <CheckBox
        android:id="@+id/checkBoxFree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:checked="true"
        android:text="@string/home_free_label" />

    <CheckBox
        android:id="@+id/checkBoxNoFree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/checkBoxFree"
        android:checked="true"
        android:text="@string/home_not_free_label" />

    <CheckBox
        android:id="@+id/checkBoxHandicap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/checkBoxNoFree"
        android:text="@string/home_handicap_label" />
    
        <CheckBox
        android:id="@+id/checkBoxSecure"
		android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/checkBoxHandicap"
        android:text="@string/home_secure_label" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/checkBoxSecure"
        android:layout_marginTop="20dp" >
        
        <Button
            android:id="@+id/buttonByGeolocalisation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/home_Geolocalisation_label" />
		    
        <Button
            android:id="@+id/buttonByAdress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:onClick="showAdressBlock"
            android:text="@string/home_away_label" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/AdressBlock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        android:visibility="invisible" >

        <TextView
            android:id="@+id/textViewAdress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/home_adress_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextAdress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp" />

        <Button
            android:id="@+id/buttonGo"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/home_search_label" />

    </LinearLayout>

</RelativeLayout>
