<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/TitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/detail_title_label"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        android:background="#0000FF"
        tools:context=".PlaceDetailsActivity" />
    
   
     <LinearLayout
            android:id="@+id/localisationTextBlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
             android:layout_below="@+id/TitleLabel"
             android:layout_marginTop="14dp">
   
            
            <TextView
                android:id="@+id/detail_local_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="25dp"
                android:textStyle="bold"
                android:textSize="18dp"
                android:text="@string/detail_localisation_label" />

			<TextView
			    android:id="@+id/TextAdressvalue"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="25dp"
			    android:layout_marginTop="25dp" />

        </LinearLayout>
    
   
    <LinearLayout
            android:id="@+id/informationTextBlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:layout_below="@+id/localisationTextBlock"
            android:orientation="vertical">
     
      
        
        <TextView
                android:id="@+id/textViewtarif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="7dp"
                android:text="@string/detail_info_gratuit" 
                />
        <TextView
                android:id="@+id/textViewaccessibilite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="7dp"
                android:text="@string/detail_info_accessH" 
                />
        
        
     
    </LinearLayout>

   <LinearLayout
       android:id="@+id/contrainteParticuliereTextBlock"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_alignParentBottom="true"
       android:layout_alignParentLeft="true"
       android:layout_marginBottom="94dp" 
       android:layout_centerHorizontal="true"
       android:orientation="vertical">

       <TextView
           android:id="@+id/detail_contrainteParticuliere_label"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginLeft="5dp"
           android:layout_marginTop="14dp"
           android:text="@string/detail_contrainte_part_label"
           android:textSize="18dp"
           android:textStyle="bold" />
       
       
        <TextView
                android:id="@+id/textViewcontrainteparticuliere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="7dp"
                android:text="@string/detail_contrainte_part_reserveeLivraison_label" 
                />
       
       
       
       
   </LinearLayout>

   <LinearLayout
       android:id="@+id/typeTextBlock"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_above="@+id/contrainteParticuliereTextBlock"
       android:layout_alignParentLeft="true"
       android:layout_marginBottom="50dp" >

       <TextView
           android:id="@+id/detail_type_label"
           android:layout_width="wrap_content"
           android:layout_height="21dp"
           android:layout_marginLeft="5dp"
           android:layout_marginTop="14dp"
           android:text="@string/detail_type_label"
           android:textSize="18dp"
           android:textStyle="bold" />

       <TextView
           android:id="@+id/TextViewTypeValue"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginLeft="15dp"
           android:layout_marginTop="14dp"
           android:text="@string/detail_type_souterrain_label"
            />

   </LinearLayout>

   <LinearLayout
       android:id="@+id/contraintHoraireTextBlock"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_above="@+id/typeTextBlock"
       android:layout_alignParentLeft="true"
       android:layout_marginBottom="42dp" >

       <TextView
           android:id="@+id/detail_contrainteHoraire_label"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginLeft="5dp"
           android:layout_marginTop="14dp"
           android:text="@string/detail_contrainte_horaire_label"
           android:textSize="18dp"
           android:textStyle="bold" />
       
        <TextView
           android:id="@+id/detail_contrainteHoraire_valeure"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginLeft="25dp"
           android:layout_marginTop="14dp"
           android:text=" Zone Bleue"
           android:textSize="15dp"
            />
       
       
   </LinearLayout>

</RelativeLayout>
